--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0503.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0503.html
@@ -204,14 +204,14 @@
             <ins class="alt" title="nlp 2.00">Πολυκλείτειον</ins>
           </span>
         </span>
-        <span id="w_38_1" class="ocr_word" title="bbox 1047 529 1423 578">
+        <span id="w_38_1_0" class="ocr_word" title="bbox 1047 529 1423 578">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">κανόνα</ins>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 1459 525 1647 578" lang="grc">
+        <span id="w_38_1_1" class="ocr_word" title="bbox 1047 529 1423 578">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κανόνα</ins>
+            <ins class="alt" title="nlp 2.00">ἐνηρμοσμένος·</ins>
           </span>
         </span>
       </span>
@@ -367,11 +367,6 @@
             <ins class="alt" title="nlp 2.00">σπονδύλων</ins>
           </span>
         </span>
-        <span id="w_71_1" class="ocr_word" title="bbox 960 836 1256 886">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_72" class="ocr_word" title="bbox 1293 856 1336 886" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τι</ins>
@@ -379,7 +374,7 @@
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1373 834 1702 888" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεπονθότων</ins>
+            <ins title="nlp 2.00">πεπονθότων τὴς</ins>
           </span>
         </span>
       </span>
@@ -555,11 +550,6 @@
             <ins class="alt" title="nlp 2.00">ἀλλ᾿</ins>
           </span>
         </span>
-        <span id="w_109_0_1" class="ocr_word" title="bbox 665 1147 755 1192">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_109_1" class="ocr_word" title="bbox 665 1147 755 1192">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">οὐ</ins>
@@ -582,7 +572,7 @@
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1362 1154 1461 1197" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">τῶν μεταφρένων</ins>
           </span>
         </span>
       </span>
@@ -936,7 +926,7 @@
         </span>
         <span id="w_185_1" class="ocr_word" title="bbox 1379 1685 1523 1753">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">συνηγόρει</ins>
           </span>
         </span>
       </span>
@@ -1184,19 +1174,19 @@
             <ins class="alt" title="nlp 2.00">δι᾿</ins>
           </span>
         </span>
-        <span id="w_234_0_1" class="ocr_word" title="bbox 1342 2077 1387 2126">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_234_1" class="ocr_word" title="bbox 1342 2077 1387 2126">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ὅλου</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 1602 2084 1687 2126" lang="grc">
+        <span id="w_235_0" class="ocr_word" title="bbox 1602 2084 1687 2126">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 1602 2084 1687 2126">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">σώματος</ins>
           </span>
         </span>
       </span>
