--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0083.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0083.html
@@ -786,12 +786,12 @@
             <ins title="nlp 2.00">C</ins>
           </span>
         </span>
-        <span id="w_152_0" class="ocr_word" title="bbox 105 1631 182 1685">
+        <span id="w_152_0_0" class="ocr_word" title="bbox 105 1631 182 1685">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(αἱ</ins>
           </span>
         </span>
-        <span id="w_152_1" class="ocr_word" title="bbox 105 1631 182 1685">
+        <span id="w_152_0_1" class="ocr_word" title="bbox 105 1631 182 1685">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -824,11 +824,6 @@
         <span id="w_158" class="ocr_word" title="bbox 943 1647 1025 1677" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_159" class="ocr_word" title="bbox 1060 1629 1368 1692" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεντήκοντα</ins>
           </span>
         </span>
       </span>
