--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0458.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0458.html
@@ -74,16 +74,11 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1800 333 1904 380" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐθε-</ins>
+            <ins title="nlp 2.00">ἐθεἀσαμτο</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 212 404 1900 473">
-        <span id="w_13" class="ocr_word" title="bbox 212 411 399 460" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">άσαντο</ins>
-          </span>
-        </span>
         <span id="w_14" class="ocr_word" title="bbox 437 407 775 468" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐνατενίζοντα</ins>
@@ -450,11 +445,6 @@
             <ins class="alt" title="nlp 1.00">χάριν,</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 404 1075 415 1082" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
-          </span>
-        </span>
         <span id="w_85" class="ocr_word" title="bbox 439 1029 683 1095" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰρήσεται</ins>
@@ -739,16 +729,11 @@
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1719 1510 1915 1561" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμπα-</ins>
+            <ins title="nlp 2.00">συμπαθείας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 213 1568 1971 1640">
-        <span id="w_142" class="ocr_word" title="bbox 213 1574 361 1633" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θείας</ins>
-          </span>
-        </span>
         <span id="w_143" class="ocr_word" title="bbox 398 1592 498 1634" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
@@ -798,7 +783,7 @@
       <span class="ocr_line" title="bbox 214 1645 1920 1719">
         <span id="w_152" class="ocr_word" title="bbox 214 1650 464 1717" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθῆστο</ins>
+            <ins title="nlp 2.00">(καθῆστο</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 511 1646 604 1718" lang="grc">
@@ -1471,9 +1456,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 340 2904 544 2949">
-        <span id="w_284" class="ocr_word" title="bbox 340 2909 387 2947" lang="grc">
+        <span id="w_284_0" class="ocr_word" title="bbox 340 2909 387 2947">
           <span class="alternatives">
-            <ins title="nlp 2.00">17 δὲ F</ins>
+            <ins class="alt" title="nlp 2.00">17</ins>
           </span>
         </span>
       </span>
