--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0316.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0316.html
@@ -136,11 +136,6 @@
             <ins class="alt" title="nlp 2.00">ὄντα,</ins>
           </span>
         </span>
-        <span id="w_23_1" class="ocr_word" title="bbox 952 477 1098 521">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_24" class="ocr_word" title="bbox 1138 457 1514 523" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φρονιμώτατον</ins>
@@ -153,7 +148,7 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1643 456 1725 507" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">καὶ ἀρετ(??)</ins>
           </span>
         </span>
       </span>
@@ -442,7 +437,7 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 662 998 824 1068" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δέδια</ins>
+            <ins title="nlp 2.00">(δέδια</ins>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 862 1019 954 1066" lang="grc">
@@ -613,12 +608,12 @@
         </span>
         <span id="w_115_0" class="ocr_word" title="bbox 1719 1233 1825 1301">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_115_1" class="ocr_word" title="bbox 1719 1233 1825 1301">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
       </span>
