--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0458.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0458.html
@@ -783,7 +783,7 @@
       <span class="ocr_line" title="bbox 214 1645 1920 1719">
         <span id="w_152" class="ocr_word" title="bbox 214 1650 464 1717" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καθῆστο</ins>
+            <ins title="nlp 2.00">καθῆστο</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 511 1646 604 1718" lang="grc">
@@ -1458,7 +1458,7 @@
       <span class="ocr_line" title="bbox 340 2904 544 2949">
         <span id="w_284_0" class="ocr_word" title="bbox 340 2909 387 2947">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">17</ins>
+            <ins title="nlp 2.00">17 δὲ F</ins>
           </span>
         </span>
       </span>
