--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0555.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0555.html
@@ -1467,7 +1467,7 @@
         </span>
         <span id="w_287_0" class="ocr_word" title="bbox 893 2787 932 2839">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ε</ins>
+            <ins class="alt" title="nlp 2.00">ε</ins>
           </span>
         </span>
         <span id="w_287_1" class="ocr_word" title="bbox 893 2787 932 2839">
