--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0505.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0505.html
@@ -634,11 +634,6 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_119_0_1" class="ocr_word" title="bbox 344 1354 436 1384">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_119_1" class="ocr_word" title="bbox 344 1354 436 1384">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἐμοῦ</ins>
@@ -671,7 +666,7 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1572 1348 1663 1384" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σου</ins>
+            <ins title="nlp 2.00">σου κἀντεῦθεν</ins>
           </span>
         </span>
       </span>
@@ -844,11 +839,6 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_160_0_1" class="ocr_word" title="bbox 376 1742 466 1772">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_160_1" class="ocr_word" title="bbox 376 1742 466 1772">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἐμοῦ</ins>
@@ -881,7 +871,7 @@
         </span>
         <span id="w_166" class="ocr_word" title="bbox 1584 1742 1637 1772" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκ</ins>
+            <ins title="nlp 2.00">ἐκ μεταμελείας</ins>
           </span>
         </span>
       </span>
@@ -889,11 +879,6 @@
         <span id="w_168" class="ocr_word" title="bbox 66 1815 93 1848">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_169" class="ocr_word" title="bbox 117 1800 309 1865" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μελείας</ins>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 349 1800 604 1865" lang="grc">
@@ -1000,11 +985,6 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_190_0_1" class="ocr_word" title="bbox 595 1975 687 2005">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_190_1" class="ocr_word" title="bbox 595 1975 687 2005">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἐκεῖνο</ins>
@@ -1027,7 +1007,7 @@
         </span>
         <span id="w_194" class="ocr_word" title="bbox 1456 1975 1555 2004" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">τῶν πολέμων</ins>
           </span>
         </span>
       </span>
@@ -1433,9 +1413,14 @@
             <ins class="alt" title="nlp 1.00">συμπεφωνημένα</ins>
           </span>
         </span>
-        <span id="w_275" class="ocr_word" title="bbox 1086 2650 1213 2717" lang="grc">
+        <span id="w_275_0" class="ocr_word" title="bbox 1086 2650 1213 2717">
           <span class="alternatives">
-            <ins title="nlp 2.00">καὶ]</ins>
+            <ins class="alt" title="nlp 2.00">[καὶ]</ins>
+          </span>
+        </span>
+        <span id="w_275_1" class="ocr_word" title="bbox 1086 2650 1213 2717">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_276" class="ocr_word" title="bbox 1253 2650 1497 2717" lang="grc">
@@ -1451,11 +1436,6 @@
         <span id="w_278" class="ocr_word" title="bbox 1616 2669 1699 2699" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_279" class="ocr_word" title="bbox 1734 2647 1806 2699" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λέγεται,</ins>
           </span>
         </span>
       </span>
