--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0317.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0317.html
@@ -1251,19 +1251,9 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_245_0_1" class="ocr_word" title="bbox 195 2576 285 2605">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_245_1_0" class="ocr_word" title="bbox 195 2576 285 2605">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">αὐτοῦ</ins>
-          </span>
-        </span>
-        <span id="w_245_1_1" class="ocr_word" title="bbox 195 2576 285 2605">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_246" class="ocr_word" title="bbox 517 2576 639 2623" lang="grc">
@@ -1283,7 +1273,7 @@
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1138 2551 1465 2619" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰσηγηθέντα</ins>
+            <ins title="nlp 2.00">εἰσηγηθέντα κατασεῖσαι  30</ins>
           </span>
         </span>
       </span>
