--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0404.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0404.html
@@ -261,12 +261,7 @@
         </span>
         <span id="w_51_0" class="ocr_word" title="bbox 597 775 766 833">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(τόπος</ins>
-          </span>
-        </span>
-        <span id="w_51_1" class="ocr_word" title="bbox 597 775 766 833">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">(τόπος</ins>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 816 773 870 821" lang="grc">
@@ -299,18 +294,18 @@
             <ins class="alt" title="nlp 1.00">τειχῶν</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 1802 775 1856 821" lang="grc">
+        <span id="w_58_0" class="ocr_word" title="bbox 1802 775 1856 821">
           <span class="alternatives">
-            <ins title="nlp 2.00">Νι-</ins>
+            <ins class="alt" title="nlp 2.00">Νικαίας</ins>
+          </span>
+        </span>
+        <span id="w_58_1" class="ocr_word" title="bbox 1802 775 1856 821">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">B</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 202 846 1905 919">
-        <span id="w_60" class="ocr_word" title="bbox 202 854 347 914" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">καίας</ins>
-          </span>
-        </span>
         <span id="w_61" class="ocr_word" title="bbox 395 850 642 919" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἀπέχων),</ins>
@@ -1308,7 +1303,7 @@
         </span>
         <span id="w_254_1" class="ocr_word" title="bbox 1697 2556 1898 2610">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">D</ins>
           </span>
         </span>
       </span>
