--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0506.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0506.html
@@ -378,7 +378,7 @@
         </span>
         <span id="w_72_1" class="ocr_word" title="bbox 1923 898 1964 931">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">4</ins>
           </span>
         </span>
       </span>
@@ -722,9 +722,14 @@
             <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
-        <span id="w_140" class="ocr_word" title="bbox 325 1499 694 1566" lang="grc">
+        <span id="w_140_0" class="ocr_word" title="bbox 325 1499 694 1566">
           <span class="alternatives">
-            <ins title="nlp 2.00">χρυσοβουλλου</ins>
+            <ins class="alt" title="nlp 2.00">χρυσοβούλλου</ins>
+          </span>
+        </span>
+        <span id="w_140_1" class="ocr_word" title="bbox 325 1499 694 1566">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 741 1497 891 1564" lang="grc">
@@ -760,11 +765,6 @@
         <span id="w_147" class="ocr_word" title="bbox 1722 1518 1806 1548" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_148" class="ocr_word" title="bbox 1847 1517 1900 1547" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -957,9 +957,14 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_185" class="ocr_word" title="bbox 328 1888 696 1954" lang="grc">
+        <span id="w_185_0" class="ocr_word" title="bbox 328 1888 696 1954">
           <span class="alternatives">
-            <ins title="nlp 2.00">χρυσοβουλλου</ins>
+            <ins class="alt" title="nlp 2.00">χρυσοβούλλου</ins>
+          </span>
+        </span>
+        <span id="w_185_1" class="ocr_word" title="bbox 328 1888 696 1954">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_186" class="ocr_word" title="bbox 743 1893 940 1953" lang="grc">
@@ -980,11 +985,6 @@
         <span id="w_189" class="ocr_word" title="bbox 1436 1886 1682 1937" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοσούτων</ins>
-          </span>
-        </span>
-        <span id="w_190" class="ocr_word" title="bbox 1725 1896 1900 1954" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χωρῶν</ins>
           </span>
         </span>
       </span>
@@ -1288,7 +1288,7 @@
         </span>
         <span id="w_247_1" class="ocr_word" title="bbox 1772 2432 1891 2478">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
