--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0085.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0085.html
@@ -195,9 +195,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 91 614 1843 684">
-        <span id="w_36" class="ocr_word" title="bbox 91 614 450 681" lang="grc">
+        <span id="w_36_0" class="ocr_word" title="bbox 91 614 450 681">
           <span class="alternatives">
-            <ins title="nlp 2.00">συνταξαμενος</ins>
+            <ins class="alt" title="nlp 2.00">συνταξάμενος</ins>
+          </span>
+        </span>
+        <span id="w_36_1" class="ocr_word" title="bbox 91 614 450 681">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 489 616 572 666" lang="grc">
@@ -238,11 +243,6 @@
         <span id="w_44" class="ocr_word" title="bbox 1601 617 1776 683" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐγγράφως</ins>
-          </span>
-        </span>
-        <span id="w_45" class="ocr_word" title="bbox 1822 633 1843 666">
-          <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
