--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0507.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0507.html
@@ -451,11 +451,6 @@
             <ins class="alt" title="nlp 2.00">ἰσάζοιντ᾿</ins>
           </span>
         </span>
-        <span id="w_83_0_1" class="ocr_word" title="bbox 931 1036 1141 1100">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_83_1" class="ocr_word" title="bbox 931 1036 1141 1100">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἂν</ins>
@@ -476,9 +471,14 @@
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 1681 1061 1794 1106" lang="grc">
+        <span id="w_87_0" class="ocr_word" title="bbox 1681 1061 1794 1106">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἡμετέροις</ins>
+            <ins class="alt" title="nlp 2.00">ἡμετέροις</ins>
+          </span>
+        </span>
+        <span id="w_87_1" class="ocr_word" title="bbox 1681 1061 1794 1106">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
