--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0318.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0318.html
@@ -460,11 +460,6 @@
             <ins class="alt" title="nlp 2.00">σῆς”.</ins>
           </span>
         </span>
-        <span id="w_87_1" class="ocr_word" title="bbox 1137 1023 1278 1087">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_88" class="ocr_word" title="bbox 1362 1024 1477 1072" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐδὲ</ins>
@@ -477,7 +472,7 @@
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1644 1027 1768 1083" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅλως</ins>
+            <ins title="nlp 2.00">ὅλως τὸν</ins>
           </span>
         </span>
       </span>
