--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0405.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0405.html
@@ -164,11 +164,6 @@
             <ins class="alt" title="nlp 2.00">Ῥοδομηρὸν</ins>
           </span>
         </span>
-        <span id="w_29_1" class="ocr_word" title="bbox 433 503 733 572">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_30" class="ocr_word" title="bbox 770 507 854 557" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -189,9 +184,14 @@
             <ins class="alt" title="nlp 1.00">παρ’</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1540 516 1700 563" lang="grc">
+        <span id="w_34_0" class="ocr_word" title="bbox 1540 516 1700 563">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑαυτῷ</ins>
+            <ins class="alt" title="nlp 2.00">ἐαυτῷ</ins>
+          </span>
+        </span>
+        <span id="w_34_1" class="ocr_word" title="bbox 1540 516 1700 563">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">νεμεσῶν,</ins>
           </span>
         </span>
       </span>
@@ -923,9 +923,9 @@
             <ins class="alt" title="nlp 2.00">Πελεκάνον</ins>
           </span>
         </span>
-        <span id="w_179_1" class="ocr_word" title="bbox 1254 1826 1544 1878">
+        <span id="w_179_1_0" class="ocr_word" title="bbox 1254 1826 1544 1878">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">ἐπδιατρίβων</ins>
           </span>
         </span>
       </span>
@@ -1101,9 +1101,9 @@
             <ins class="alt" title="nlp 2.00">Ἀντιόχειαν</ins>
           </span>
         </span>
-        <span id="w_214_1" class="ocr_word" title="bbox 1703 2132 1813 2185">
+        <span id="w_214_1_0" class="ocr_word" title="bbox 1703 2132 1813 2185">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
