--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0086.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0086.html
@@ -1489,9 +1489,9 @@
             <ins class="alt" title="nlp 1.00">ἡμῶν</ins>
           </span>
         </span>
-        <span id="w_293_0" class="ocr_word" title="bbox 1813 2736 1899 2768">
+        <span id="w_293_0_0" class="ocr_word" title="bbox 1813 2736 1899 2768">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">πε-</ins>
+            <ins class="alt" title="nlp 2.00">πεἐγὼ</ins>
           </span>
         </span>
       </span>
@@ -1499,11 +1499,6 @@
         <span id="w_294_0" class="ocr_word" title="bbox 323 2885 373 2923">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">17</ins>
-          </span>
-        </span>
-        <span id="w_294_1" class="ocr_word" title="bbox 323 2885 373 2923">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐγὼ</ins>
           </span>
         </span>
         <span id="w_296" class="ocr_word" title="bbox 526 2880 616 2924">
