--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0508.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0508.html
@@ -448,9 +448,9 @@
             <ins class="alt" title="nlp 1.00">βασιλεία</ins>
           </span>
         </span>
-        <span id="w_86" class="ocr_word" title="bbox 1502 948 1936 1006" lang="grc">
+        <span id="w_86_0" class="ocr_word" title="bbox 1502 948 1936 1006">
           <span class="alternatives">
-            <ins title="nlp 2.00">κωνσταντινουπόλεως</ins>
+            <ins class="alt" title="nlp 2.00">Κωνσταντινουπόλεως</ins>
           </span>
         </span>
       </span>
@@ -554,7 +554,7 @@
         </span>
         <span id="w_106_1" class="ocr_word" title="bbox 1796 1116 1912 1162">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">D</ins>
           </span>
         </span>
       </span>
