--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0557.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0557.html
@@ -1449,9 +1449,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 135 2864 1352 2927">
-        <span id="w_285" class="ocr_word" title="bbox 314 2885 358 2913">
+        <span id="w_285_0" class="ocr_word" title="bbox 314 2885 358 2913">
           <span class="alternatives">
-            <ins title="nlp 2.00">r:</ins>
+            <ins class="alt" title="nlp 2.00">μένου</ins>
+          </span>
+        </span>
+        <span id="w_285_1" class="ocr_word" title="bbox 314 2885 358 2913">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">r:</ins>
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 393 2865 865 2927" lang="grc">
@@ -1481,7 +1486,7 @@
         </span>
         <span id="w_290_1" class="ocr_word" title="bbox 1253 2884 1287 2909">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
