--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0406.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0406.html
@@ -183,9 +183,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_35" class="ocr_word" title="bbox 1793 528 1904 594" lang="grc">
+        <span id="w_35_0" class="ocr_word" title="bbox 1793 528 1904 594">
           <span class="alternatives">
-            <ins title="nlp 2.00">Βαϊ-</ins>
+            <ins class="alt" title="nlp 2.00">Βαἱμούντου</ins>
           </span>
         </span>
       </span>
@@ -193,11 +193,6 @@
         <span id="w_36" class="ocr_word" title="bbox 172 625 192 658">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">5</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 215 621 433 669" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μούντου</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 460 600 745 666" lang="grc">
@@ -422,12 +417,7 @@
         </span>
         <span id="w_80_0" class="ocr_word" title="bbox 851 993 937 1058">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ἦν</ins>
-          </span>
-        </span>
-        <span id="w_80_1" class="ocr_word" title="bbox 851 993 937 1058">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">ἦν</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 980 1013 1073 1059" lang="grc">
@@ -445,9 +435,14 @@
             <ins title="nlp 2.00">μέγεθος,</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1560 990 1738 1040" lang="grc">
+        <span id="w_84_0" class="ocr_word" title="bbox 1560 990 1738 1040">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁποίαν</ins>
+            <ins class="alt" title="nlp 2.00">ὁποίαν</ins>
+          </span>
+        </span>
+        <span id="w_84_1" class="ocr_word" title="bbox 1560 990 1738 1040">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οὔπω</ins>
           </span>
         </span>
       </span>
