--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0509.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0509.html
@@ -1161,11 +1161,6 @@
             <ins class="alt" title="nlp 2.00">τάττοιντ᾿</ins>
           </span>
         </span>
-        <span id="w_220_0_1" class="ocr_word" title="bbox 115 2204 335 2255">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_220_1" class="ocr_word" title="bbox 115 2204 335 2255">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἄν·</ins>
@@ -1196,9 +1191,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_226" class="ocr_word" title="bbox 1353 2197 1588 2263" lang="grc">
+        <span id="w_226_0" class="ocr_word" title="bbox 1353 2197 1588 2263">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑμέτερον</ins>
+            <ins class="alt" title="nlp 2.00">κράτος</ins>
+          </span>
+        </span>
+        <span id="w_226_1" class="ocr_word" title="bbox 1353 2197 1588 2263">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
