--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0407.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0407.html
@@ -119,9 +119,9 @@
             <ins title="nlp 2.00">ὑπ᾿ αὐτοὺς </ins>
           </span>
         </span>
-        <span id="w_21" class="ocr_word" title="bbox 1701 357 1792 410" lang="grc">
+        <span id="w_21_0" class="ocr_word" title="bbox 1701 357 1792 410">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀν-</ins>
+            <ins class="alt" title="nlp 2.00">ἀναρίθμητα</ins>
           </span>
         </span>
       </span>
@@ -129,11 +129,6 @@
         <span id="w_22" class="ocr_word" title="bbox 48 437 76 472">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_23" class="ocr_word" title="bbox 100 432 349 494" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αρίθμητα</ins>
           </span>
         </span>
         <span id="w_24" class="ocr_word" title="bbox 398 425 610 476" lang="grc">
@@ -457,7 +452,7 @@
         </span>
         <span id="w_84_1" class="ocr_word" title="bbox 1713 997 1788 1027">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
