--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0319.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0319.html
@@ -48,11 +48,6 @@
             <ins class="alt" title="nlp 2.00">ἔσο</ins>
           </span>
         </span>
-        <span id="w_6_1" class="ocr_word" title="bbox 763 290 843 325">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_7" class="ocr_word" title="bbox 891 278 1061 327" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοίνυν</ins>
@@ -70,7 +65,7 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1650 276 1716 339" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
+            <ins title="nlp 2.00">ὡς τὸ</ins>
           </span>
         </span>
       </span>
@@ -189,14 +184,9 @@
             <ins class="alt" title="nlp 2.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_33_1" class="ocr_word" title="bbox 1255 530 1285 574">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_34" class="ocr_word" title="bbox 1320 509 1402 559" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">καὶ μελετηθέντων</ins>
           </span>
         </span>
       </span>
@@ -414,9 +404,9 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_78" class="ocr_word" title="bbox 1583 897 1810 947" lang="grc">
+        <span id="w_78_0" class="ocr_word" title="bbox 1583 897 1810 947">
           <span class="alternatives">
-            <ins title="nlp 2.00">τουτονὲ”</ins>
+            <ins class="alt" title="nlp 2.00">τουτονὶ”</ins>
           </span>
         </span>
       </span>
@@ -770,11 +760,6 @@
             <ins class="alt" title="nlp 2.00">ὀμβριμοεργὸν</ins>
           </span>
         </span>
-        <span id="w_148_1" class="ocr_word" title="bbox 870 1514 1228 1583">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_149" class="ocr_word" title="bbox 1254 1518 1337 1567" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -787,7 +772,7 @@
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1497 1509 1582 1575" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰς</ins>
+            <ins title="nlp 2.00">τὰς πράξεις</ins>
           </span>
         </span>
       </span>
