--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0087.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0087.html
@@ -408,9 +408,9 @@
             <ins class="alt" title="nlp 1.00">τε</ins>
           </span>
         </span>
-        <span id="w_81" class="ocr_word" title="bbox 1670 920 1808 987" lang="grc">
+        <span id="w_81_0" class="ocr_word" title="bbox 1670 920 1808 987">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ρομπέρτου</ins>
+            <ins class="alt" title="nlp 2.00">Ῥομπέρτου</ins>
           </span>
         </span>
       </span>
@@ -744,24 +744,29 @@
             <ins class="alt" title="nlp 1.00">ὅπως</ins>
           </span>
         </span>
-        <span id="w_146" class="ocr_word" title="bbox 1185 1563 1270 1593" lang="grc">
+        <span id="w_146_0" class="ocr_word" title="bbox 1185 1563 1270 1593">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_147" class="ocr_word" title="bbox 1322 1547 1370 1605" lang="grc">
+        <span id="w_146_1" class="ocr_word" title="bbox 1185 1563 1270 1593">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξ</ins>
+            <ins class="alt" title="nlp 2.00">ἐξ</ins>
           </span>
         </span>
-        <span id="w_148_0" class="ocr_word" title="bbox 1410 1545 1532 1594">
+        <span id="w_147_0" class="ocr_word" title="bbox 1322 1547 1370 1605">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Οἵων</ins>
+            <ins class="alt" title="nlp 2.00">οἵων</ins>
           </span>
         </span>
-        <span id="w_148_1" class="ocr_word" title="bbox 1410 1545 1532 1594">
+        <span id="w_147_1" class="ocr_word" title="bbox 1322 1547 1370 1605">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">ἀφορμῶν</ins>
+          </span>
+        </span>
+        <span id="w_148_0_0" class="ocr_word" title="bbox 1410 1545 1532 1594">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οἵων</ins>
           </span>
         </span>
       </span>
