--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0510.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0510.html
@@ -47,11 +47,6 @@
             <ins class="alt" title="nlp 2.00">ἵνα</ins>
           </span>
         </span>
-        <span id="w_6_1" class="ocr_word" title="bbox 779 329 863 379">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_7" class="ocr_word" title="bbox 912 328 1130 390" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δεσπόζω</ins>
@@ -67,9 +62,14 @@
             <ins class="alt" title="nlp 1.00">ἀντιλήψει</ins>
           </span>
         </span>
-        <span id="w_10" class="ocr_word" title="bbox 1571 348 1655 379" lang="grc">
+        <span id="w_10_0" class="ocr_word" title="bbox 1571 348 1655 379">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
+          </span>
+        </span>
+        <span id="w_10_1" class="ocr_word" title="bbox 1571 348 1655 379">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κράτους</ins>
           </span>
         </span>
       </span>
@@ -282,14 +282,14 @@
             <ins class="alt" title="nlp 2.00">ποτε,</ins>
           </span>
         </span>
-        <span id="w_51_1" class="ocr_word" title="bbox 1463 736 1605 783">
+        <span id="w_52_0" class="ocr_word" title="bbox 1654 716 1777 769">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">ἀλλὰ</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1654 716 1777 769" lang="grc">
+        <span id="w_52_1" class="ocr_word" title="bbox 1654 716 1777 769">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
+            <ins class="alt" title="nlp 2.00">παλιμπορεύτους</ins>
           </span>
         </span>
       </span>
@@ -420,11 +420,6 @@
             <ins class="alt" title="nlp 2.00">ἵνα</ins>
           </span>
         </span>
-        <span id="w_78_1" class="ocr_word" title="bbox 653 1029 738 1078">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_79" class="ocr_word" title="bbox 765 1027 1004 1095" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐγγυητὰς</ins>
@@ -445,9 +440,14 @@
             <ins class="alt" title="nlp 1.00">ταύταις</ins>
           </span>
         </span>
-        <span id="w_83" class="ocr_word" title="bbox 1644 1034 1751 1089" lang="grc">
+        <span id="w_83_0" class="ocr_word" title="bbox 1644 1034 1751 1089">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῖς</ins>
+            <ins class="alt" title="nlp 2.00">ταῖς</ins>
+          </span>
+        </span>
+        <span id="w_83_1" class="ocr_word" title="bbox 1644 1034 1751 1089">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">συμφωνίαις,</ins>
           </span>
         </span>
       </span>
@@ -1498,7 +1498,7 @@
       <span class="ocr_line" title="bbox 331 2900 614 2957">
         <span id="w_289" class="ocr_word" title="bbox 331 2906 380 2944" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">γένοι F</ins>
+            <ins title="nlp 2.00">21 γένοι F</ins>
           </span>
         </span>
       </span>
