--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0409.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0409.html
@@ -384,9 +384,9 @@
             <ins class="alt" title="nlp 1.00">σοι</ins>
           </span>
         </span>
-        <span id="w_71" class="ocr_word" title="bbox 1624 926 1800 989" lang="grc">
+        <span id="w_71_0" class="ocr_word" title="bbox 1624 926 1800 989">
           <span class="alternatives">
-            <ins title="nlp 2.00">βούλο-</ins>
+            <ins class="alt" title="nlp 2.00">Βούλομαι</ins>
           </span>
         </span>
       </span>
@@ -394,11 +394,6 @@
         <span id="w_72" class="ocr_word" title="bbox 57 1022 88 1053">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_73" class="ocr_word" title="bbox 110 1022 197 1068" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μαι</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 233 999 507 1065" lang="grc">
@@ -809,12 +804,7 @@
         </span>
         <span id="w_152_0" class="ocr_word" title="bbox 873 1621 976 1683">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(καὶ</ins>
-          </span>
-        </span>
-        <span id="w_152_1" class="ocr_word" title="bbox 873 1621 976 1683">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1021 1641 1114 1687" lang="grc">
@@ -839,7 +829,7 @@
         </span>
         <span id="w_157" class="ocr_word" title="bbox 1573 1623 1687 1686" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βοὸς</ins>
+            <ins title="nlp 2.00">βοὸς ἐπὶ</ins>
           </span>
         </span>
       </span>
@@ -1428,9 +1418,9 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_275" class="ocr_word" title="bbox 1712 2644 1813 2674" lang="grc">
+        <span id="w_275_0" class="ocr_word" title="bbox 1712 2644 1813 2674">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοι-</ins>
+            <ins class="alt" title="nlp 2.00">τοιαῦτα</ins>
           </span>
         </span>
       </span>
@@ -1438,11 +1428,6 @@
         <span id="w_276" class="ocr_word" title="bbox 63 2729 97 2761">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_277" class="ocr_word" title="bbox 120 2716 245 2758" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αῦτα</ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 290 2713 651 2773" lang="grc">
