--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0088.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0088.html
@@ -12,13 +12,12 @@
       <span class="ocr_line" title="bbox 772 864 1276 932">
         <span id="w_0" class="ocr_word" title="bbox 772 864 1180 932">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ΑΛΕΞΙΑΣ</ins>
-            <del title="nlp 0.90">Ἀλεξίας</del>
+            <ins title="nlp 2.00">ΑΛΕΞΙΑΣ</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1224 866 1276 926">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">Β</ins>
+            <ins title="nlp 2.00">Β</ins>
           </span>
         </span>
       </span>
@@ -416,9 +415,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 116 1715 1872 1783">
-        <span id="w_80" class="ocr_word" title="bbox 116 1716 425 1768" lang="grc">
+        <span id="w_80_0" class="ocr_word" title="bbox 116 1716 425 1768">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἰσαάκιον</ins>
+            <ins class="alt" title="nlp 2.00">10</ins>
+          </span>
+        </span>
+        <span id="w_80_1" class="ocr_word" title="bbox 116 1716 425 1768">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ἰσαάκιον</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 461 1719 620 1767" lang="grc">
