--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0320.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0320.html
@@ -932,11 +932,6 @@
             <ins class="alt" title="nlp 2.00">κἂν</ins>
           </span>
         </span>
-        <span id="w_184_1" class="ocr_word" title="bbox 419 1864 518 1894">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_185" class="ocr_word" title="bbox 553 1842 579 1893" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
@@ -959,7 +954,7 @@
         </span>
         <span id="w_189" class="ocr_word" title="bbox 1427 1864 1509 1895" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">καὶ παρενέφαινε</ins>
           </span>
         </span>
       </span>
@@ -1360,11 +1355,6 @@
             <ins class="alt" title="nlp 2.00">ἣν</ins>
           </span>
         </span>
-        <span id="w_267_1" class="ocr_word" title="bbox 501 2560 568 2603">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_268" class="ocr_word" title="bbox 604 2558 725 2606" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
@@ -1397,7 +1387,7 @@
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1613 2557 1720 2607" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔσχε</ins>
+            <ins title="nlp 2.00">ἔσχε συνήθειαν,</ins>
           </span>
         </span>
       </span>
@@ -1523,7 +1513,7 @@
         </span>
         <span id="w_300_1" class="ocr_word" title="bbox 1434 2808 1741 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">S</ins>
           </span>
         </span>
       </span>
