--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0512.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0512.html
@@ -999,9 +999,9 @@
             <ins class="alt" title="nlp 1.00">τούτους</ins>
           </span>
         </span>
-        <span id="w_195" class="ocr_word" title="bbox 1597 1957 1887 2022" lang="grc">
+        <span id="w_195_0" class="ocr_word" title="bbox 1597 1957 1887 2022">
           <span class="alternatives">
-            <ins title="nlp 2.00">φύμπαντας</ins>
+            <ins class="alt" title="nlp 2.00">ξύμπαντας</ins>
           </span>
         </span>
       </span>
