--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0411.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0411.html
@@ -327,12 +327,7 @@
         </span>
         <span id="w_61_0" class="ocr_word" title="bbox 1056 761 1152 823">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ἔτι</ins>
-          </span>
-        </span>
-        <span id="w_61_1" class="ocr_word" title="bbox 1056 761 1152 823">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">(ἔτι</ins>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1188 781 1280 828" lang="grc">
@@ -347,7 +342,7 @@
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1495 768 1722 827" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατεῖχον</ins>
+            <ins title="nlp 2.00">κατεῖχον οἱ</ins>
           </span>
         </span>
       </span>
