--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0460.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0460.html
@@ -114,14 +114,14 @@
             <ins class="alt" title="nlp 1.00">ἐπιφανῶν</ins>
           </span>
         </span>
-        <span id="w_20" class="ocr_word" title="bbox 1795 419 1919 481" lang="grc">
+        <span id="w_20_0" class="ocr_word" title="bbox 1795 419 1919 481">
           <span class="alternatives">
-            <ins title="nlp 2.00">Τρα-</ins>
+            <ins class="alt" title="nlp 2.00">Τραπεζπθμτίων</ins>
           </span>
         </span>
-        <span id="w_21" class="ocr_word" title="bbox 1942 434 1968 466">
+        <span id="w_20_1" class="ocr_word" title="bbox 1795 419 1919 481">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1265,7 +1265,7 @@
       <span class="ocr_line" title="bbox 234 2515 1932 2588">
         <span id="w_243" class="ocr_word" title="bbox 234 2517 512 2585" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολίχνιον</ins>
+            <ins title="nlp 2.00">(πολίχνιον</ins>
           </span>
         </span>
         <span id="w_244" class="ocr_word" title="bbox 569 2523 625 2571" lang="grc">
@@ -1483,16 +1483,11 @@
         </span>
         <span id="w_285" class="ocr_word" title="bbox 1728 2871 1935 2927" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμβου-</ins>
+            <ins title="nlp 2.00">συμβουλευσόμενον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 236 2926 1141 2986">
-        <span id="w_286" class="ocr_word" title="bbox 236 2926 525 2984" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λευσόμενον</ins>
-          </span>
-        </span>
         <span id="w_287" class="ocr_word" title="bbox 555 2943 597 2972">
           <span class="alternatives">
             <ins title="nlp 2.00">r:</ins>
