--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0089.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0089.html
@@ -246,14 +246,14 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 1645 635 1785 670" lang="grc">
+        <span id="w_47_0" class="ocr_word" title="bbox 1645 635 1785 670">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἑσπέρας</ins>
+            <ins class="alt" title="nlp 2.00">ἑσπέρας</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 1832 637 1851 669">
+        <span id="w_47_1" class="ocr_word" title="bbox 1645 635 1785 670">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1267,9 +1267,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_249" class="ocr_word" title="bbox 901 2404 1133 2469" lang="grc">
+        <span id="w_249_0" class="ocr_word" title="bbox 901 2404 1133 2469">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐκάτερον</ins>
+            <ins class="alt" title="nlp 2.00">ἑκέτερον</ins>
+          </span>
+        </span>
+        <span id="w_249_1" class="ocr_word" title="bbox 901 2404 1133 2469">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_250" class="ocr_word" title="bbox 1158 2412 1258 2453" lang="grc">
@@ -1285,11 +1290,6 @@
         <span id="w_252" class="ocr_word" title="bbox 1435 2422 1614 2453" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἑαυτοῦ</ins>
-          </span>
-        </span>
-        <span id="w_253" class="ocr_word" title="bbox 1648 2407 1785 2453" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πολεμίων,</ins>
           </span>
         </span>
       </span>
@@ -1494,7 +1494,7 @@
         </span>
         <span id="w_294_0" class="ocr_word" title="bbox 1168 2827 1322 2880">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(φθον</ins>
+            <ins class="alt" title="nlp 2.00">φθον</ins>
           </span>
         </span>
         <span id="w_294_1" class="ocr_word" title="bbox 1168 2827 1322 2880">
