--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0321.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0321.html
@@ -105,11 +105,6 @@
             <ins class="alt" title="nlp 2.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_18_1" class="ocr_word" title="bbox 1393 389 1420 420">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_19" class="ocr_word" title="bbox 1466 372 1521 420" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
@@ -117,7 +112,7 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1567 391 1656 421" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
+            <ins title="nlp 2.00">τὸν υἱὸν</ins>
           </span>
         </span>
       </span>
@@ -825,14 +820,9 @@
             <ins class="alt" title="nlp 2.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_157_1" class="ocr_word" title="bbox 1337 1550 1368 1595">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_158" class="ocr_word" title="bbox 1395 1529 1536 1595" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγος</ins>
+            <ins title="nlp 2.00">λόγος δρομάδας</ins>
           </span>
         </span>
       </span>
@@ -845,11 +835,6 @@
         <span id="w_161_0_0" class="ocr_word" title="bbox 288 1625 379 1654">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
-          </span>
-        </span>
-        <span id="w_161_0_1" class="ocr_word" title="bbox 288 1625 379 1654">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_161_1" class="ocr_word" title="bbox 288 1625 379 1654">
@@ -869,7 +854,7 @@
         </span>
         <span id="w_164" class="ocr_word" title="bbox 1325 1623 1425 1665" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῖς</ins>
+            <ins title="nlp 2.00">τοῖς ἀπερχομένοις</ins>
           </span>
         </span>
       </span>
@@ -1376,11 +1361,6 @@
             <ins class="alt" title="nlp 2.00">Μιχαὴλ</ins>
           </span>
         </span>
-        <span id="w_264_1" class="ocr_word" title="bbox 919 2540 1128 2601">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_265" class="ocr_word" title="bbox 1155 2555 1218 2584" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
@@ -1391,14 +1371,9 @@
             <ins class="alt" title="nlp 2.00">ἐκτομίᾳ,</ins>
           </span>
         </span>
-        <span id="w_266_1" class="ocr_word" title="bbox 1248 2536 1460 2600">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_267" class="ocr_word" title="bbox 1499 2531 1624 2583" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κᾆθ’</ins>
+            <ins title="nlp 2.00">κᾆθ' οὕτως 30</ins>
           </span>
         </span>
       </span>
