--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0513.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0513.html
@@ -1247,9 +1247,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 119 2343 1808 2415">
-        <span id="w_242" class="ocr_word" title="bbox 391 2364 524 2398" lang="grc">
+        <span id="w_242_0" class="ocr_word" title="bbox 391 2364 524 2398">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἴσται' </ins>
+            <ins class="alt" title="nlp 2.00">ἔσται</ins>
+          </span>
+        </span>
+        <span id="w_242_1" class="ocr_word" title="bbox 391 2364 524 2398">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 545 2347 861 2415" lang="grc">
@@ -1280,11 +1285,6 @@
         <span id="w_248" class="ocr_word" title="bbox 1596 2343 1627 2409" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
-          </span>
-        </span>
-        <span id="w_249" class="ocr_word" title="bbox 1667 2348 1808 2410" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">βασιλεία</ins>
           </span>
         </span>
       </span>
