--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0322.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0322.html
@@ -418,11 +418,6 @@
             <ins class="alt" title="nlp 2.00">πιγκέρνην</ins>
           </span>
         </span>
-        <span id="w_79_1" class="ocr_word" title="bbox 997 913 1268 982">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_80" class="ocr_word" title="bbox 1305 915 1543 980" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συνήθως</ins>
@@ -435,7 +430,7 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1667 934 1752 980" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
+            <ins title="nlp 2.00">τῆς βασιλικῆς</ins>
           </span>
         </span>
       </span>
@@ -900,11 +895,6 @@
             <ins class="alt" title="nlp 2.00">δι᾿</ins>
           </span>
         </span>
-        <span id="w_174_1" class="ocr_word" title="bbox 615 1773 665 1821">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_175" class="ocr_word" title="bbox 733 1772 887 1821" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
@@ -917,7 +907,7 @@
         </span>
         <span id="w_177" class="ocr_word" title="bbox 1217 1771 1579 1836" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπομόσασθαι.</ins>
+            <ins title="nlp 2.00">ἐπομόσασθαι. πείθεται</ins>
           </span>
         </span>
       </span>
